--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,7 +144,7 @@ header {
 }
 
 .drop-down-content {
-  @apply foreground border-primary dark:border-primary-dark w-56 mr-5 py-4 px-3 rounded-2xl space-y-2 lg:max-h-[500px] max-h-[680px] h-full justify-between flex flex-col md:overflow-y-scroll;
+  @apply foreground border-primary dark:border-primary-dark w-56 mr-5 py-4 px-3 rounded-2xl space-y-2 max-h-[500px] h-full justify-between flex flex-col md:overflow-y-scroll;
 }
 
 .drop-down-item {
