--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,7 @@ form {
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
-  @apply relative h-56 z-10 -top-1.5 rounded-b-2xl rounded-t-none bg-primary dark:bg-primary-dark container pt-6 pb-3;
+  @apply relative h-60 z-10 -top-1.5 rounded-b-2xl rounded-t-none bg-primary dark:bg-primary-dark w-full mx-auto px-2 max-w-[1400px] pt-6 pb-3;
 }
 
 .mining-stats {
@@ -132,7 +132,7 @@ form {
 }
 
 .mining-stats .tag {
-  @apply w-full p-3 px-4 text-wrap rounded-lg bg-black text-white text-xs h-fit md:py-3;
+  @apply w-full py-4 px-2 text-wrap rounded-lg bg-black text-white font-medium text-base h-fit;
 }
 
 header {
@@ -172,7 +172,7 @@ header {
 }
 
 .leader-banner {
-  @apply flex items-center gap-4 foreground p-2 rounded-xl;
+  @apply flex items-center gap-4 foreground p-4 rounded-xl;
 }
 
 .other-positions {
@@ -195,11 +195,11 @@ header {
 }
 
 .tasktab-container-tabcontroller-tab {
-  @apply rounded-xl font-semibold text-[#ABABAB] dark:text-[#ABABAB] text-lg gap-1;
+  @apply rounded-xl font-semibold text-[#ABABAB] dark:text-[#ABABAB] py-4 text-lg gap-1;
 }
 
 .tasktab-container-content {
-  @apply rounded-2xl drop-shadow-sm min-h-[500px];
+  @apply rounded-2xl drop-shadow-sm min-h-[550px];
 }
 
 .link-colour {
@@ -231,11 +231,11 @@ header {
 }
 
 .personal-container {
-  @apply fixed bottom-5 bg-primary dark:bg-primary-dark inset-x-5 md:inset-x-10 lg:inset-x-20 p-2 max-h-20 h-full flex items-center justify-between rounded-xl text-xs text-black dark:text-white font-semibold;
+  @apply fixed bottom-5 bg-primary dark:bg-primary-dark inset-x-5 md:inset-x-10 lg:inset-x-20 p-4 max-h-28 h-full flex items-center justify-between rounded-xl text-xs text-black dark:text-white font-semibold;
 }
 
 .personal-container h3 {
-  @apply text-base;
+  @apply text-[17px];
 }
 
 .connect-wallet {
